--- a/glc_cs/Properties/Resources.resx
+++ b/glc_cs/Properties/Resources.resx
@@ -151,4 +151,10 @@
   <data name="icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dconico" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dconico.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dconstat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dconstat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
