--- a/glc_cs/MainLauncher.resx
+++ b/glc_cs/MainLauncher.resx
@@ -651,6 +651,9 @@
   <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>133, 17</value>
   </metadata>
+  <data name="notifyIcon1.BalloonTipTitle" xml:space="preserve">
+    <value>Game Launcher</value>
+  </data>
   <data name="notifyIcon1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAoAEBAAAAEAIABoBAAApgAAABgYAAABACAAuAkAAA4FAAAgIAAAAQAgACgRAADGDgAAMDAAAAEA
